Fix scrollbar view for Firefox browsers

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@ body {
 
 *{
   -ms-overflow-style: none;
+  scrollbar-width: none;  /* Firefox */
 }
 ::-webkit-scrollbar {
   display: none;
